--- a/reconstruction_ecoulement/plot_comparaison.ipynb
+++ b/reconstruction_ecoulement/plot_comparaison.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -70,9 +70,9 @@
     }
    ],
    "source": [
-    "with open(\"results/\" + folder_name + \"/hyper_param.json\", \"r\") as file:\n",
-    "    hyper_param = json.load(file)\n",
-    "model = PINNs(hyper_param)\n",
+    "with open(\"results/\" + folder_name + \"/hyperparam.json\", \"r\") as file:\n",
+    "    hyperparam = json.load(file)\n",
+    "model = PINNs(hyperparam)\n",
     "checkpoint = torch.load(\n",
     "    \"results/\" + folder_name + \"/\" + epoch + \"/\" + \"model_weights.pth\",\n",
     "    map_location=torch.device(\"cpu\"),\n",
@@ -204,11 +204,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def charge_data(hyper_param, param_adim, mean_std):\n",
+    "def charge_data(hyperparam, param_adim, mean_std):\n",
     "    \"\"\"\n",
     "    Charge the data of X_full, U_full with every points\n",
     "    And X_train, U_train with less points\n",
@@ -216,7 +216,7 @@
     "    # La data\n",
     "    # On adimensionne la data\n",
     "    time_start_charge = time.time()\n",
-    "    nb_simu = len(hyper_param[\"file\"])\n",
+    "    nb_simu = len(hyperparam[\"file\"])\n",
     "    x_full, y_full, t_full, ya0_full, w0_full = [], [], [], [], []\n",
     "    u_full, v_full, p_full = [], [], []\n",
     "    x_norm_full, y_norm_full, t_norm_full, ya0_norm_full, w0_norm_full = (\n",
@@ -227,26 +227,26 @@
     "        [],\n",
     "    )\n",
     "    u_norm_full, v_norm_full, p_norm_full = [], [], []\n",
-    "    H_numpy = np.array(hyper_param[\"H\"])\n",
-    "    f_numpy = 0.5 * (H_numpy / hyper_param[\"m\"]) ** 0.5\n",
+    "    H_numpy = np.array(hyperparam[\"H\"])\n",
+    "    f_numpy = 0.5 * (H_numpy / hyperparam[\"m\"]) ** 0.5\n",
     "    f = np.min(f_numpy)\n",
-    "    t_max = hyper_param[\"t_min\"] + hyper_param[\"nb_period\"] / f\n",
+    "    t_max = hyperparam[\"t_min\"] + hyperparam[\"nb_period\"] / f\n",
     "    for k in range(nb_simu):\n",
-    "        df = pd.read_csv(\"data/\" + hyper_param[\"file\"][k])\n",
+    "        df = pd.read_csv(\"data/\" + hyperparam[\"file\"][k])\n",
     "        df_modified = df.loc[\n",
-    "            (df[\"Points:0\"] >= hyper_param[\"x_min\"])\n",
-    "            & (df[\"Points:0\"] <= hyper_param[\"x_max\"])\n",
-    "            & (df[\"Points:1\"] >= hyper_param[\"y_min\"])\n",
-    "            & (df[\"Points:1\"] <= hyper_param[\"y_max\"])\n",
-    "            & (df[\"Time\"] > hyper_param[\"t_min\"])\n",
+    "            (df[\"Points:0\"] >= hyperparam[\"x_min\"])\n",
+    "            & (df[\"Points:0\"] <= hyperparam[\"x_max\"])\n",
+    "            & (df[\"Points:1\"] >= hyperparam[\"y_min\"])\n",
+    "            & (df[\"Points:1\"] <= hyperparam[\"y_max\"])\n",
+    "            & (df[\"Time\"] > hyperparam[\"t_min\"])\n",
     "            & (df[\"Time\"] < t_max)\n",
     "            & (df[\"Points:2\"] == 0.0)\n",
-    "            & (df[\"Points:0\"] ** 2 + df[\"Points:1\"] ** 2 > hyper_param['r_min'] ** 2),\n",
+    "            & (df[\"Points:0\"] ** 2 + df[\"Points:1\"] ** 2 > hyperparam['r_min'] ** 2),\n",
     "            :,\n",
     "        ].copy()\n",
-    "        df_modified.loc[:, \"ya0\"] = hyper_param[\"ya0\"][k]\n",
+    "        df_modified.loc[:, \"ya0\"] = hyperparam[\"ya0\"][k]\n",
     "        df_modified.loc[:, \"w0\"] = (\n",
-    "            torch.pi * (hyper_param[\"H\"][k] / hyper_param[\"m\"]) ** 0.5\n",
+    "            torch.pi * (hyperparam[\"H\"][k] / hyperparam[\"m\"]) ** 0.5\n",
     "        )\n",
     "\n",
     "        # Adimensionnement\n",
@@ -259,8 +259,8 @@
     "            / param_adim[\"L\"]\n",
     "        )\n",
     "        f_flow = f_numpy[k]\n",
-    "        # time_without_modulo = df_modified[\"Time\"].to_numpy() - hyper_param['t_min']\n",
-    "        # time_with_modulo = hyper_param['t_min'] + time_without_modulo % (1/f_flow)\n",
+    "        # time_without_modulo = df_modified[\"Time\"].to_numpy() - hyperparam['t_min']\n",
+    "        # time_with_modulo = hyperparam['t_min'] + time_without_modulo % (1/f_flow)\n",
     "        time_with_modulo = df_modified[\"Time\"].to_numpy()\n",
     "        t_full.append(\n",
     "            torch.tensor(time_with_modulo, dtype=torch.float32)\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -448,17 +448,17 @@
    "source": [
     "for k in range(1):\n",
     "    print(k)\n",
-    "    hyper_param['num'] = [num[k]]\n",
-    "    hyper_param['case'] = [case[k]]\n",
-    "    hyper_param['H'] = [DICT_CASE[str(k)] for k in hyper_param['case']]\n",
-    "    hyper_param['ya0'] = [DICT_Y0[str(k)] for k in hyper_param['num']]\n",
-    "    hyper_param['file'] = [\n",
-    "        f\"model_{num_}_case_{case_}.csv\" for num_, case_ in zip(hyper_param['num'], hyper_param['case'])\n",
+    "    hyperparam['num'] = [num[k]]\n",
+    "    hyperparam['case'] = [case[k]]\n",
+    "    hyperparam['H'] = [DICT_CASE[str(k)] for k in hyperparam['case']]\n",
+    "    hyperparam['ya0'] = [DICT_Y0[str(k)] for k in hyperparam['num']]\n",
+    "    hyperparam['file'] = [\n",
+    "        f\"model_{num_}_case_{case_}.csv\" for num_, case_ in zip(hyperparam['num'], hyperparam['case'])\n",
     "        ]\n",
     "    (\n",
     "        X_full,\n",
     "        U_full,\n",
-    "    ) = charge_data(hyper_param, PARAM_ADIM, mean_std)\n",
+    "    ) = charge_data(hyperparam, PARAM_ADIM, mean_std)\n",
     "    \n",
     "    U_predict = model(X_full)\n",
     "\n",
