--- a/reconstruction_ecoulement/plot_points.ipynb
+++ b/reconstruction_ecoulement/plot_points.ipynb
@@ -57,17 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"results/\" + folder_name + \"/hyper_param.json\", \"r\") as file:\n",
-    "    hyper_param = json.load(file)\n"
+    "with open(\"results/\" + folder_name + \"/hyperpara.json\", \"r\") as file:\n",
+    "    hyperpara = json.load(file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
     "        X_test_pde,\n",
     "        X_test_data,\n",
     "        U_test_data,\n",
-    "    ) = charge_data(hyper_param, PARAM_ADIM)"
+    "    ) = charge_data(hyperpara, PARAM_ADIM)"
    ]
   },
   {
