--- a/prediction_ecoulement/plot_loss.ipynb
+++ b/prediction_ecoulement/plot_loss.ipynb
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "plot_loss_decompose('results/'+folder_name, \"results/\"+folder_name+ f\"/epoch{epoch}\", 'loss.png')"
+    "plot_loss_decompose('results/'+folder_name, \"results/\"+folder_name+ f\"/epoch{epoch}\", 'loss_decompose.png')"
    ]
   },
   {
